force-app/main/default/objects/GLB_P1_ParticipantePropuesta__c/GLB_P1_ParticipantePropuesta__c.object-meta.xml
<CustomObject>
    <label>Participante propuesta</label>
    <nameField>
        <displayFormat>PART-{00000000}</displayFormat>
        <label>N° Participante de propuesta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participantes propuesta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>