force-app/main/default/objects/GLB_P1_ParticipantePropuesta__c/fields/GLB_P1_Comentarios__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Comentarios__c</fullName>
    <label>Comentarios</label>
    <type>TextArea</type>
</CustomField>