force-app/main/default/objects/GLB_P1_ParticipantePropuesta__c/fields/GLB_P1_Funcion__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Funcion__c</fullName>
    <label>Función</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funcion 1</fullName>
            </value>
            <value>
                <fullName>Funcion 2</fullName>
            </value>
            <value>
                <fullName>Funcion 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>