force-app/main/default/objects/GLB_P1_ParticipantePropuesta__c/fields/GLB_P1_IDExterno__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_IDExterno__c</fullName>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>