force-app/main/default/objects/GLB_P1_ParticipantePropuesta__c/fields/GLB_P1_NumeroPropuesta__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_NumeroPropuesta__c</fullName>
    <externalId>true</externalId>
    <label>Número de propuesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>