force-app/main/default/objects/GLB_P1_ParticipantePropuesta__c/fields/GLB_P1_Producto__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Participantes propuesta</relationshipLabel>
    <relationshipName>Participantes_propuesta</relationshipName>
    <type>Lookup</type>
</CustomField>