force-app/main/default/objects/GLB_P1_ParticipantePropuesta__c/fields/GLB_P1_Propuesta__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Propuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propuesta</label>
    <referenceTo>GLB_P1_Propuesta__c</referenceTo>
    <relationshipLabel>Participantes propuesta</relationshipLabel>
    <relationshipName>Participantes_propuesta</relationshipName>
    <type>Lookup</type>
</CustomField>