force-app/main/default/objects/GLB_P1_ParticipantePropuesta__c/fields/GLB_P1_RutPagador__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_RutPagador__c</fullName>
    <label>Rut pagador</label>
    <length>10</length>
    <type>Text</type>
</CustomField>